updating the calculator with more functionalities

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
   	<div id="header-wrap">
 		<header class="header">
-			<img class="img header" src="Banner.jpg" alt="al-aleem banner">
+			<img class="img header" src="img/Banner.jpg" alt="al-aleem banner">
 		</header>
 	</div>
 	<div>
@@ -70,9 +70,9 @@
 		</nav>
 	</div>
 	<div id="content-wrap" >
-		<div class="navbar sticky-top navbar-dark bg-#a21155">
+		<div class="navbar navbar-expand-lg sticky-top navbar-dark bg-#a21155">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navlinksSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span style="box-shadow: 1px 1px 3px black, -1px -1px 3px black;" class="navbar-toggler-icon"></span>
+					<span style="box-shadow: 1px 1px 3px #f5c1a9, -1px -1px 3px #f5c1a9; background-color: #900748; border-radius: 5px;" class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navlinksSupportedContent">
 				<div class="calc-navigation-wrap">
@@ -582,13 +582,13 @@
 				</article>
 				<div class="d-flex flex-row flex-wrap flex-container">
 				<article class="article p-2 my-flex-item">
-					<img class="about-dev" src="Adewale.jpg">
+					<img class="about-dev" src="img/Adewale.jpg">
 					<h2 class="article-head" title="instructor">
 						Mr. (Dev.) Abdulsamad Adewale
 					</h2>
 				</article>
 				<article class="article">
-					<img class="about-img" src="ss3ac.jpg">
+					<img class="about-img" src="img/ss3ac.jpg">
 					<h2 class="article-head" title="JS">
 						Maths Club Team
 					</h2>
