adding rocket img fixed to bottom to quickly navigate to calc links and modifying the nav links to anchor buttons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>
-    	Maths Club | Multipurpose Calculator
+    	Maths lab | Multipurpose Calculator
     </title>
   </head>
   <body>
@@ -22,11 +22,11 @@
 				<span class="maths matics">
 					Maths
 				</span>
-				<span class="maths club">
-					club
+				<span class="maths lab">
+					lab
 				</span>
 				<span class="maths project">
-					project
+					<sub>project</sub>
 				</span><br>
 				<marquee>
 					<small class="school">
@@ -40,104 +40,102 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a class="nav-link links" href="#">Home <span class="sr-only">(current)</span></a>
+						<a class="nav-link links" href="#"><span class="nav-span">Home</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link links" href="#">About</a>
+						<a class="nav-link links" href="#"><span class="nav-span">About</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link links" href="#">Contact</a>
+						<a class="nav-link links" href="#"><span class="nav-span">Contact</span></a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle links" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Dropdown
+							<span class="nav-span">Dropdown</span>
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<ul class="navbar-nav nav">
 								<a class="dropdown-item" href="#">login</a>
 								<a class="dropdown-item" href="#">Register</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Something else here</a>
 							</ul>
 						</div>
 					</li>
 				</ul>
 				<form class="form-inline my-2 my-lg-0">
 					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					<button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
 				</form>
 			</div>
 		</nav>
 	</div>
 	<div id="content-wrap" >
-		<div class="navbar navbar-expand-lg sticky-top navbar-dark bg-#a21155">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navlinksSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span style="box-shadow: 1px 1px 3px #f5c1a9, -1px -1px 3px #f5c1a9; background-color: #900748; border-radius: 5px;" class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navlinksSupportedContent">
-				<div class="calc-navigation-wrap">
-					<h3 class="multiple">
-						Multipurpose Calculator
-					</h3>
-					<div class="d-flex flex-row flex-wrap flex-container">
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#basic">
-								Calculator
-							</a>
-						</div>
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#converter">
-								Converter
-							</a>
-						</div>
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#circle">
-								Circle
-							</a>
-						</div>
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#triangle">
-								Triangle
-							</a>
-						</div>
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#rectangle">
-								Rectangle
-							</a>
-						</div>
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#rectangle">
-								Square
-							</a>
-						</div>
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#parallelogram">
-								Parallelogram
-							</a>
-						</div>
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#cylinder">
-								Cylinder
-							</a>
-						</div>
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#trapezium">
-								Trapezium
-							</a>
-						</div>
-						<div class = "p-2 my-flex-item">
-							<a class="calc links" href="#num-base">
-								Number Bases
-							</a>
-						</div>
+		<div>
+			<div id="calc-navigation-wrap">
+				<h3 class="multiple">
+					Multipurpose Calculator
+				</h3>
+				<div class="d-flex flex-row flex-wrap justify-content-center flex-container">
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#basic">
+							Calculator
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#cylinder">
+							Cylinder
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#triangle">
+							Triangle
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#rectangle">
+							Rectangle
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#converter">
+							Converter
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#rectangle">
+							Square
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#trapezium">
+							Trapezium
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#circle">
+							Circle
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#simple-interest">
+							Interests
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#num-base">
+							Number Bases
+						</a>
+					</div>
+					<div class = "p-2 my-flex-item">
+						<a class="btn btn-outline-warning" href="#parallelogram">
+							Parallelogram
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div>
 			<div class="row">
-				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="basic-calc-wrap">
-					<h3 id="basic" class="head">
+				<div id="basic" class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="basic-calc-wrap">
+					<h3 class="head">
 						Calculator
 					</h3>
 					<div>
@@ -204,13 +202,13 @@
 						<br>
 						<input id="result-bas" class="input number" type="text" name="result" placeholder="result">
 					</div>
-					<div>
+					<div class="submit-wrap d-flex justify-content-center">
 						<button id="submit-bas" class="input submit">answer</button>
 						<button id="reset-bas" class="input submit">reset</button>
 					</div>
 				</div>
-				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Number-Base-calc-wrap">
-					<h3 id="num-base" class="head">
+				<div id="num-base" class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Number-Base-calc-wrap">
+					<h3 class="head">
 						Number Bases
 					</h3>
 					<div>
@@ -253,15 +251,15 @@
 						<br>
 						<input id="result-base" class="input number" type="text" name="result-base" placeholder="result">
 					</div>
-					<div>
+					<div class="submit-wrap d-flex justify-content-center">
 						<button id="submit-base" class="input submit">answer</button>
 						<button id="reset-base" class="input submit">reset</button>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Triangle-Calc-wrap">
-					<h3 id="triangle" class="head">
+				<div id="triangle" class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Triangle-Calc-wrap">
+					<h3 class="head">
 						Triangle
 					</h3>
 					<div>
@@ -297,13 +295,13 @@
 						<br>
 						<input id="tri-perimeter" class="input number" type="number" name="tri-per" placeholder="if triangle is isosceles only">
 					</div>
-					<div>
+					<div class="submit-wrap d-flex justify-content-center">
 						<button id="submit-tri" class="input submit">answer</button>
 						<button id="reset-tri" class="input submit">reset</button>
 					</div>
 				</div>
-				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Rectangle-Calc-wrap">
-					<h3 id="rectangle" class="head">
+				<div id="rectangle" class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Rectangle-Calc-wrap">
+					<h3 class="head">
 						Rectangle/Square
 					</h3>
 					<div>
@@ -339,15 +337,15 @@
 						<br>
 						<input id="rect-perimeter" class="input number" type="number" name="rect-per" placeholder="perimeter">
 					</div>
-					<div>
+					<div class="submit-wrap d-flex justify-content-center">
 						<button id="submit-rect" class="input submit">answer</button>
 						<button id="reset-rect" class="input submit">reset</button>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Circle-Calc-wrap">
-					<h3 id="circle" class="head">
+				<div id="circle" class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Circle-Calc-wrap">
+					<h3 class="head">
 						Circle
 					</h3>
 					<div>
@@ -403,14 +401,14 @@
 						<br>
 						<input id="cir-circumference" class="input number" type="number" name="cir-circumference" placeholder="circumference">
 					</div>
-					<div>
+					<div class="submit-wrap d-flex justify-content-center">
 						<button id="submit-cir" class="input submit">answer</button>
 						<button id="reset-cir" class="input submit">reset</button>
 					</div>
 				</div>
 
-				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Cylinder-Calc-wrap">
-					<h3 id="cylinder" class="head">
+				<div id="cylinder" class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Cylinder-Calc-wrap">
+					<h3 class="head">
 						Cylinder
 					</h3>
 					<div>
@@ -483,15 +481,15 @@
 						<br>
 						<input id="cyl-vol" class="input number" type="number" name="cyl-vol" placeholder="volume">
 					</div>
-					<div>
+					<div class="submit-wrap d-flex justify-content-center">
 						<button id="submit-cyl" class="input submit">answer</button>
 						<button id="reset-cyl" class="input submit">reset</button>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Trapezium-Calc-wrap">
-					<h3 id="trapezium" class="head">
+				<div id="trapezium" class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Trapezium-Calc-wrap">
+					<h3 class="head">
 						Trapezium
 					</h3>
 					<div>
@@ -524,13 +522,13 @@
 						<br>
 						<input id="trap-area" class="input number" type="number" name="trap-area" placeholder="area">
 					</div>
-					<div>
+					<div class="submit-wrap d-flex justify-content-center">
 						<button id="submit-trap" class="input submit">answer</button>
 						<button id="reset-trap" class="input submit">reset</button>
 					</div>
 				</div>
-				<div class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Parallelogram-Calc-wrap">
-					<h3 id="parallelogram" class="head">
+				<div id="parallelogram" class="col-lg-5 col-md-5 col-sm-10 calc-wrap" id="Parallelogram-Calc-wrap">
+					<h3 class="head">
 						Parallelogram
 					</h3>
 					<div>
@@ -556,7 +554,7 @@
 						<br>
 						<input id="par-area" class="input number" type="number" name="par-area" placeholder="area">
 					</div>
-					<div>
+					<div class="submit-wrap d-flex justify-content-center">
 						<button id="submit-par" class="input submit">answer</button>
 						<button id="reset-par" class="input submit">reset</button>
 					</div>
@@ -565,10 +563,10 @@
 		</div>
 		<div id="About-wrap">
 			<h3 id="About-head">
-				Al-Aleem Academy Mathematics Club
+				Al-Aleem Academy Mathematics lab
 			</h3>
 				<article class="article">
-					<h2 class="article-head p-2 my-flex-item" title="maths club team">
+					<h2 class="article-head p-2 my-flex-item" title="maths lab team">
 						Objectives, Goals and Aims.
 					</h2>
 					<p style="font-size: 10pt; padding-left: 10px; color: lightgray; letter-spacing: 2px; word-spacing: 4px;">
@@ -590,7 +588,7 @@
 				<article class="article">
 					<img class="about-img" src="img/ss3ac.jpg">
 					<h2 class="article-head" title="JS">
-						Maths Club Team
+						Maths lab Team
 					</h2>
 					<p style="font-size: 10pt; padding-left: 10px; color: lightgray; letter-spacing: 2px; word-spacing: 4px;">
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -611,10 +609,13 @@
 					&copy Copyright.
 				</p>
 				<p>
-					Al-Aleem College mathematics club is a learning hub that embraced students of the college from different classes, different departments and different instructors coming together as one for the sole purpose of helping the college achieve its aims, goals and pre-set objectives.
+					Al-Aleem College mathematics lab is a learning hub that embraced students of the college from different classes, different departments and different instructors coming together as one for the sole purpose of helping the college achieve its aims, goals and pre-set objectives.
 					We are not gender biased neither are we age discriminating. We bring together unity amongst culture and religion and we are not known for racism.
 					We are Mathematicians, we are Technologists, we are Developers, we are Programmers and of course we are PROBLEM SOLVERS!.
 				</p>
+				<a class="fixed-bottom" title="go to top" href="#calc-navigation-wrap">
+							<img id="up-arrow" src="img/arrow-up1.png" alt="arrow up button">
+					</a>
 			</footer>
 		</div>
 	</div>
