--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<h3 class="multiple">
 					Multipurpose Calculator
 				</h3>
-				<div class="d-flex flex-row flex-wrap justify-content-center flex-container">
+				<div class="d-flex flex-row flex-wrap justify-content-between flex-container">
 					<div class = "p-2 my-flex-item">
 						<a class="btn btn-outline-warning" href="#basic">
 							Calculator
@@ -202,7 +202,7 @@
 						<br>
 						<input id="result-bas" class="input number" type="text" name="result" placeholder="result">
 					</div>
-					<div class="submit-wrap d-flex justify-content-center">
+					<div class="submit-wrap d-flex justify-content-between">
 						<button id="submit-bas" class="input submit">answer</button>
 						<button id="reset-bas" class="input submit">reset</button>
 					</div>
@@ -251,7 +251,7 @@
 						<br>
 						<input id="result-base" class="input number" type="text" name="result-base" placeholder="result">
 					</div>
-					<div class="submit-wrap d-flex justify-content-center">
+					<div class="submit-wrap d-flex justify-content-between">
 						<button id="submit-base" class="input submit">answer</button>
 						<button id="reset-base" class="input submit">reset</button>
 					</div>
@@ -295,7 +295,7 @@
 						<br>
 						<input id="tri-perimeter" class="input number" type="number" name="tri-per" placeholder="if triangle is isosceles only">
 					</div>
-					<div class="submit-wrap d-flex justify-content-center">
+					<div class="submit-wrap d-flex justify-content-between">
 						<button id="submit-tri" class="input submit">answer</button>
 						<button id="reset-tri" class="input submit">reset</button>
 					</div>
@@ -337,7 +337,7 @@
 						<br>
 						<input id="rect-perimeter" class="input number" type="number" name="rect-per" placeholder="perimeter">
 					</div>
-					<div class="submit-wrap d-flex justify-content-center">
+					<div class="submit-wrap d-flex justify-content-between">
 						<button id="submit-rect" class="input submit">answer</button>
 						<button id="reset-rect" class="input submit">reset</button>
 					</div>
@@ -401,7 +401,7 @@
 						<br>
 						<input id="cir-circumference" class="input number" type="number" name="cir-circumference" placeholder="circumference">
 					</div>
-					<div class="submit-wrap d-flex justify-content-center">
+					<div class="submit-wrap d-flex justify-content-between">
 						<button id="submit-cir" class="input submit">answer</button>
 						<button id="reset-cir" class="input submit">reset</button>
 					</div>
@@ -481,7 +481,7 @@
 						<br>
 						<input id="cyl-vol" class="input number" type="number" name="cyl-vol" placeholder="volume">
 					</div>
-					<div class="submit-wrap d-flex justify-content-center">
+					<div class="submit-wrap d-flex justify-content-between">
 						<button id="submit-cyl" class="input submit">answer</button>
 						<button id="reset-cyl" class="input submit">reset</button>
 					</div>
@@ -522,7 +522,7 @@
 						<br>
 						<input id="trap-area" class="input number" type="number" name="trap-area" placeholder="area">
 					</div>
-					<div class="submit-wrap d-flex justify-content-center">
+					<div class="submit-wrap d-flex justify-content-between">
 						<button id="submit-trap" class="input submit">answer</button>
 						<button id="reset-trap" class="input submit">reset</button>
 					</div>
@@ -554,7 +554,7 @@
 						<br>
 						<input id="par-area" class="input number" type="number" name="par-area" placeholder="area">
 					</div>
-					<div class="submit-wrap d-flex justify-content-center">
+					<div class="submit-wrap d-flex justify-content-between">
 						<button id="submit-par" class="input submit">answer</button>
 						<button id="reset-par" class="input submit">reset</button>
 					</div>
@@ -608,14 +608,25 @@
 				<p>
 					&copy Copyright.
 				</p>
-				<p>
-					Al-Aleem College mathematics lab is a learning hub that embraced students of the college from different classes, different departments and different instructors coming together as one for the sole purpose of helping the college achieve its aims, goals and pre-set objectives.
-					We are not gender biased neither are we age discriminating. We bring together unity amongst culture and religion and we are not known for racism.
-					We are Mathematicians, we are Technologists, we are Developers, we are Programmers and of course we are PROBLEM SOLVERS!.
-				</p>
+				<table>
+					<tbody>
+						<tr>
+							<td>
+								Al-Aleem College mathematics lab is a learning hub that embraced students of the college from different classes, different departments and different instructors coming together as one for the sole purpose of helping the college achieve its aims, goals and pre-set objectives.
+								We are not gender biased neither are we age discriminating. We bring together unity amongst culture and religion and we are not known for racism.
+								We are Mathematicians, we are Technologists, we are Developers, we are Programmers and of course we are PROBLEM SOLVERS!.
+							</td>
+							<td>
+								Al-Aleem College mathematics lab is a learning hub that embraced students of the college from different classes, different departments and different instructors coming together as one for the sole purpose of helping the college achieve its aims, goals and pre-set objectives.
+								We are not gender biased neither are we age discriminating. We bring together unity amongst culture and religion and we are not known for racism.
+								We are Mathematicians, we are Technologists, we are Developers, we are Programmers and of course we are PROBLEM SOLVERS!.
+							</td>
+						</tr>
+					</tbody>
+				</table>
 				<a class="fixed-bottom" title="go to top" href="#calc-navigation-wrap">
-							<img id="up-arrow" src="img/arrow-up1.png" alt="arrow up button">
-					</a>
+					<img id="up-arrow" src="img/arrow-up1.png" alt="arrow up button">
+				</a>
 			</footer>
 		</div>
 	</div>
