adding functionality to the cone calculator

--- a/index.html
+++ b/index.html
@@ -693,8 +693,15 @@
 								<input id="cone-radius" class="input" type="number" name="cone-radius" placeholder="radius">
 							</div>
 							<div class="input-container">
-								<label for="cone-height">
+								<label for="cone-slant-height">
 									Slant-Height-( l ):
+								</label>
+								<br>
+								<input id="cone-slant-height" class="input" type="number" name="cone-slant-height" placeholder="slant-height">
+							</div>
+							<div class="input-container">
+								<label for="cone-height">
+									Height-( h ):
 								</label>
 								<br>
 								<input id="cone-height" class="input" type="number" name="cone-height" placeholder="height">
